force-app/main/default/objects/Consent__c/Consent__c.object-meta.xml
<CustomObject>
  <description>DSGVO/GDPR consent record per customer Account.</description>
  <label>Consent</label>
  <pluralLabel>Consents</pluralLabel>
  <nameField>
    <displayFormat>CON-{000000}</displayFormat>
    <label>Consent Number</label>
    <type>AutoNumber</type>
  </nameField>
  <sharingModel>Private</sharingModel>
</CustomObject>