force-app/main/default/objects/Consent__c/fields/Granted__c.field-meta.xml
<CustomField>
  <fullName>Granted__c</fullName>
  <label>Granted</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>