force-app/main/default/objects/Consent__c/fields/Granted_On__c.field-meta.xml
<CustomField>
  <fullName>Granted_On__c</fullName>
  <label>Granted On</label>
  <type>Date</type>
</CustomField>