force-app/main/default/objects/Consent__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Marketing</fullName><default>true</default><label>Marketing</label></value>
            <value><fullName>DataProcessing</fullName><default>false</default><label>Data Processing</label></value>
            <value><fullName>SmartMeterData</fullName><default>false</default><label>Smart Meter Data</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>